--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -286,6 +286,7 @@
                     android:padding="8dp">
 
                     <ImageView
+                        android:id="@+id/userother"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:src="@drawable/person3"
