--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,7 +18,7 @@
         android:title="@string/Notifications" />
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/nav_profile_selector"
+        android:icon="@drawable/person1opened"
         android:title="@string/Profile"/>
 
 </menu>
